[BUG #7771]  Scrollbar not working on Windows Phone 8 - Improved performance of scrolling by using native scroll on page.

--- a/framework/source/resource/qx/mobile/scss/common/_scroller.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_scroller.scss
@@ -28,6 +28,8 @@
  
   position:relative;
   overflow:hidden;
+
+  -ms-touch-action:none;
 }
 
 .scroll-container-child {
@@ -41,4 +43,5 @@
 .scroll.native {
   -webkit-overflow-scrolling:touch;
   overflow:scroll;
+  
 }
